Changes from 1.31 to 1.32
-------------------------
(XX September 2009)

* Updated country TLD in URLs and email for AEGIS CA (RS)
* Updated contact information for CALC CA (LV)
* Extended life time and updated profile or TR-Grid CA cert and CRL URL (TR)
* Added persistently-named links to pre-installed accredited bundles
* Updated or added references to CP and CPS documents for GR

Changes from 1.30 to 1.31
-------------------------
(28 July 2009)

* Removed expired root certificate for BEGrid (03aa0ecb) (BE)
* Removed expired and discontinued User and Server issuing CAs 
  for DFN (fe102e03 and 34f8e29c) (DE)

Changes from 1.29 to 1.30
-------------------------
(2 June 2009)

* Updated contact meta-data for BYGCA, hash 709bed08 (BY)
* Updated URLs for DFN Grid PKI public web pages (DE)
* Added accredited NCSA GridShib SLCS CA (US)
* Added accredited DFN SLCS CA (DE)
* Added accredited TACC MICS CA (US)
* Added accredited SWITCH (QuoVadis anchored) CAs (CH)
* Added accredited FNAL-SLCS CA (US)

Changes from 1.28 to 1.29
-------------------------
(4 May 2009)

* Restored NGO-Netrust CA (SG)
* Updated AIST Grid (CRL) URL metadata (JP)
* Added accredited MD-Grid CA with hash 9ff26ea4 (MD)
* Added accredited HKU Grid CA with hash 4798da47 (HK)
* Updated signing policy file of APAC Grid CA (AU)
* Added accredited classic BYGCA (Belarus) with hash 709bed08 (BY)
* Updated namespace for the APAC CA (AU, NZ)

Changes from 1.27 to 1.28
-------------------------
(10 March 2009)

* Added accredited classic ULAGrid CA (VE)
* Added accredited TACC Root and TACC Classic CAs (US)
* Updated NERSC CRL URL download location (US)
* Updated DOEGrids CRL URL download location (US)
* Extended life time of NorduGrid CA (1f0e8352) (DK,SE,NO,FI,IS)
* Added SigmaNet CALG CA (LV)
* Updated AEGIS CA root certificate to reflect TLD name change (RS)
* Added CRL for SWITCH-SLCS issuing CA and updated CA cert (304cf809) (CH)
Other updates to miscellaneous CAs: