@@ -1,12 +1,12 @@
 #
-# @(#)$Id: 47d3d1a0.info,v 1.1 2007/02/07 11:15:35 pmacvsdg Exp $
+# @(#)$Id: 47d3d1a0.info,v 1.2 2008/01/21 16:03:43 pmacvsdg Exp $
 # Information for CA SWITCH Personal 2007
 #   
 alias = SWITCH-Personal-2007
 ca_url = http://swisssign.net/cgi-bin/authority/download?into=save_as_pem&ca=F4CA49AE6EC8BD86BA54D2A1BFB650EDFAFE3460
 crl_url = http://crl.swisssign.net/F4CA49AE6EC8BD86BA54D2A1BFB650EDFAFE3460
 requires = SWITCH
-status = accredited:classic
+status = discontinued
 version = @VERSION@
 email = pki@switch.ch
 sha1fp.0 = @SHA1FP.0@
