@@ -1,11 +1,11 @@
 #
-# @(#)$Id: 7b2d086c.info,v 1.6 2007/02/08 14:24:44 pmacvsdg Exp $
+# @(#)$Id: 7b2d086c.info,v 1.7 2008/01/21 16:03:43 pmacvsdg Exp $
 # Information for CA SwissSign-Root
 #   obtained from 7b2d086c in SWITCH/
 alias = SwissSign-Root
 ca_url = http://swisssign.net/cgi-bin/authority/download?into=save_as_pem&ca=96D771CD392AD4FC88B18AAB537869EF8F477E16
 crl_url = http://crl.swisssign.net/96D771CD392AD4FC88B18AAB537869EF8F477E16
 email = pki@switch.ch
-status = accredited:classic
+status = discontinued
 version = @VERSION@
 sha1fp.0 = @SHA1FP.0@
