@@ -1,12 +1,12 @@
 #
-# @(#)$Id: c4435d12.info,v 1.6 2007/02/08 14:24:44 pmacvsdg Exp $
+# @(#)$Id: c4435d12.info,v 1.7 2008/01/21 16:03:43 pmacvsdg Exp $
 # Information for CA SWITCH
 #   obtained from c4435d12 in SWITCH/
 alias = SWITCH
 ca_url = http://swisssign.net/cgi-bin/authority/download?into=save_as_pem&ca=25C907F5142CD02905EF95F54243D5EA908D7373
 crl_url = http://crl.swisssign.net/25C907F5142CD02905EF95F54243D5EA908D7373
 requires = SwissSign-Silver
-status = accredited:classic
+status = discontinued
 version = @VERSION@
 email = pki@switch.ch
 sha1fp.0 = @SHA1FP.0@
