@@ -1,12 +1,12 @@
 #
-# @(#)$Id: e36e7a72.info,v 1.6 2007/02/08 14:24:44 pmacvsdg Exp $
+# @(#)$Id: e36e7a72.info,v 1.7 2008/01/21 16:03:43 pmacvsdg Exp $
 # Information for CA SwissSign-Bronze
 #   obtained from e36e7a72 in SWITCH/
 alias = SwissSign-Bronze
 ca_url = http://swisssign.net/cgi-bin/authority/download?into=save_as_pem&ca=E2DE8E8AE3FF7141C7533C93DA8D6EB1D241484A
 crl_url = http://crl.swisssign.net/E2DE8E8AE3FF7141C7533C93DA8D6EB1D241484A
 requires = SwissSign-Root
-status = accredited:classic
+status = discontinued
 version = @VERSION@
 email = pki@switch.ch
 sha1fp.0 = @SHA1FP.0@
