@@ -1,12 +1,12 @@
 #
-# @(#)$Id: e9d08b40.info,v 1.6 2007/02/08 14:24:44 pmacvsdg Exp $
+# @(#)$Id: e9d08b40.info,v 1.7 2008/01/21 16:03:43 pmacvsdg Exp $
 # Information for CA SwissSign-Silver
 #   obtained from e9d08b40 in SWITCH/
 alias = SwissSign-Silver
 ca_url = http://swisssign.net/cgi-bin/authority/download?into=save_as_pem&ca=CDA1AC23BFD03B208A5481CDFBDB4126E34A705A
 crl_url = http://crl.swisssign.net/CDA1AC23BFD03B208A5481CDFBDB4126E34A705A
 requires = SwissSign-Bronze
-status = accredited:classic
+status = discontinued
 version = @VERSION@
 email = pki@switch.ch
 sha1fp.0 = @SHA1FP.0@
