@@ -1,12 +1,12 @@
 #
-# @(#)$Id: eebc7717.info,v 1.1 2007/02/07 11:15:35 pmacvsdg Exp $
+# @(#)$Id: eebc7717.info,v 1.2 2008/01/21 16:03:44 pmacvsdg Exp $
 # Information for CA SWITCH Server 2007
 #   
 alias = SWITCH-Server-2007
 ca_url = http://swisssign.net/cgi-bin/authority/download?into=save_as_pem&ca=1AFDCB5395B081DD3A38849F63E87C0A42E0E6FE
 crl_url = http://crl.swisssign.net/1AFDCB5395B081DD3A38849F63E87C0A42E0E6FE
 requires = SWITCH
-status = accredited:classic
+status = discontinued
 version = @VERSION@
 email = pki@switch.ch
 sha1fp.0 = @SHA1FP.0@
