@@ -27,3 +27,9 @@ EstonianGrid
 DFN-GridGermany-User
 DFN-GridGermany-Server
 BEGrid
+SWITCH-Personal-2007
+SwissSign-Root
+SWITCH
+SwissSign-Bronze
+SwissSign-Silver
+SWITCH-Server-2007
